--- a/index.html
+++ b/index.html
@@ -1,13 +1,244 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <!-- 核心手机适配，禁止缩放，保证聊天界面在手机上正常显示 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>双人专属私密聊天</title>
+    <style>
+        /* 全局样式重置，消除默认边距 */
+        * { 
+            margin: 0; 
+            padding: 0; 
+            box-sizing: border-box; 
+            font-family: "微软雅黑", "PingFang SC", sans-serif; 
+        }
+        body { 
+            background: #f8f9fa; 
+            padding: 15px; 
+            max-width: 600px; 
+            margin: 0 auto; 
+            height: 100vh; 
+            display: flex; 
+            flex-direction: column; 
+            gap: 15px;
+        }
+        /* 聊天消息展示框，占满剩余高度 */
+        #chat-box { 
+            flex: 1; 
+            background: #ffffff; 
+            border-radius: 12px; 
+            padding: 20px; 
+            overflow-y: auto; 
+            box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+            scrollbar-width: thin; /* 火狐滚动条美化 */
+            scrollbar-color: #ccc #eee;
+        }
+        /* Chrome/Edge滚动条美化，避免滚动条太宽影响视觉 */
+        #chat-box::-webkit-scrollbar { width: 6px; }
+        #chat-box::-webkit-scrollbar-thumb { 
+            background: #ccc; 
+            border-radius: 3px; 
+        }
+        #chat-box::-webkit-scrollbar-thumb:hover { background: #999; }
+        /* 消息基础样式，限制最大宽度，自动换行 */
+        .msg { 
+            margin: 10px 0; 
+            padding: 12px 18px; 
+            border-radius: 20px; 
+            max-width: 75%; 
+            word-wrap: break-word;
+            font-size: 16px;
+            line-height: 1.4;
+        }
+        /* 自己发送的消息：蓝色、右对齐、右下角圆角变小 */
+        .send { 
+            background: #0078ff; 
+            color: #ffffff; 
+            margin-left: auto; 
+            border-bottom-right-radius: 5px;
+        }
+        /* 接收的消息：浅灰、左对齐、左下角圆角变小 */
+        .receive { 
+            background: #e5e9f0; 
+            color: #333333; 
+            margin-right: auto; 
+            border-bottom-left-radius: 5px;
+        }
+        /* 输入框区域，粘性定位防止滚动时消失 */
+        #input-box { 
+            display: flex; 
+            gap: 10px; 
+            align-items: center; 
+            position: sticky; 
+            bottom: 0;
+        }
+        /* 消息输入框，占满剩余宽度，美化样式 */
+        #msg-input { 
+            flex: 1; 
+            padding: 14px 20px; 
+            border: 1px solid #e0e0e0; 
+            border-radius: 30px; 
+            outline: none; 
+            font-size: 16px;
+            background: #fff;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+            transition: border 0.2s ease;
+        }
+        /* 输入框聚焦时高亮边框 */
+        #msg-input:focus { 
+            border-color: #0078ff; 
+            box-shadow: 0 0 0 2px rgba(0,120,255,0.1);
+        }
+        #msg-input::placeholder { color: #999; }
+        /* 发送按钮，美化样式，点击有反馈 */
+        #send-btn { 
+            padding: 14px 28px; 
+            background: #0078ff; 
+            color: #fff; 
+            border: none; 
+            border-radius: 30px; 
+            cursor: pointer; 
+            font-size: 16px;
+            transition: background 0.2s ease;
+            white-space: nowrap; /* 防止按钮文字换行 */
+        }
+        #send-btn:active { background: #0066cc; }
+        /* 系统提示样式，居中显示 */
+        .alert {
+            text-align: center;
+            color: #666;
+            font-size: 14px;
+            margin: 8px 0;
+        }
+        /* 小屏手机适配，缩小内边距，保证操作体验 */
+        @media (max-width: 375px) {
+            .msg { padding: 10px 15px; font-size: 15px; }
+            #msg-input { padding: 12px 18px; font-size: 15px; }
+            #send-btn { padding: 12px 20px; font-size: 15px; }
+        }
+    </style>
+</head>
+<body>
+    <!-- 聊天消息展示区 -->
+    <div id="chat-box"></div>
+    <!-- 消息输入与发送区 -->
+    <div id="input-box">
+        <input type="text" id="msg-input" placeholder="输入消息，回车/点击均可发送~" autocomplete="off">
+        <button id="send-btn">发送</button>
+    </div>
+
+    <script>
+        // ########## 已配置你的Replit后端WSS地址，无需修改 ##########
+        const WS_URL = "wss://couple-chat-backend-zhangyuxiaowan1.replit.app";
+        // #######################################################
+
+        // 获取页面核心元素
+        const chatBox = document.getElementById('chat-box');
+        const msgInput = document.getElementById('msg-input');
+        const sendBtn = document.getElementById('send-btn');
+        let ws; // WebSocket实例，用于和后端通信
+
+        // 初始化WebSocket连接，包含自动重连机制
+        function initWebSocket() {
+            // 创建WebSocket实例，连接后端
+            ws = new WebSocket(WS_URL);
+
+            // 连接成功回调
+            ws.onopen = () => {
+                console.log('✅ 已成功连接到聊天后端');
+                // 清除之前的重连提示（如果有）
+                const oldAlert = document.querySelector('.alert');
+                oldAlert && oldAlert.remove();
+                msgInput.focus(); // 连接成功后聚焦输入框，方便输入
+            };
+
+            // 接收后端消息回调
+            ws.onmessage = (e) => {
+                addMessage(e.data, 'receive'); // 展示接收的消息
+                scrollToBottom(); // 自动滚动到最新消息
+            };
+
+            // 连接关闭回调（非主动关闭则自动重连）
+            ws.onclose = (e) => {
+                if (e.code !== 1000) { // 1000为正常关闭码，其他为异常断开
+                    addAlert('⚠️ 聊天连接断开，3秒后自动重连...');
+                    setTimeout(initWebSocket, 3000); // 3秒后重新初始化连接
+                }
+            };
+
+            // 连接错误回调
+            ws.onerror = (err) => {
+                console.error('❌ WebSocket连接错误：', err);
+                addAlert('⚠️ 聊天连接出错，请检查网络！');
+            };
+        }
+
+        // 向聊天框添加消息（区分发送/接收）
+        function addMessage(text, type) {
+            const msgDiv = document.createElement('div');
+            msgDiv.className = `msg ${type}`;
+            msgDiv.innerText = text;
+            chatBox.appendChild(msgDiv);
+        }
+
+        // 向聊天框添加系统提示（如重连、错误信息）
+        function addAlert(text) {
+            const alertDiv = document.createElement('div');
+            alertDiv.className = 'alert';
+            alertDiv.innerText = text;
+            chatBox.appendChild(alertDiv);
+        }
+
+        // 自动滚动到聊天框底部，显示最新消息
+        function scrollToBottom() {
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
+
+        // 发送消息核心方法（包含校验逻辑）
+        function sendMessage() {
+            const text = msgInput.value.trim();
+            // 校验1：消息不能为空
+            if (!text) {
+                alert('请输入要发送的消息~');
+                msgInput.focus();
+                return;
+            }
+            // 校验2：WebSocket必须处于已连接状态
+            if (!ws || ws.readyState !== WebSocket.OPEN) {
+                addAlert('❌ 尚未连接到后端，无法发送消息！');
+                return;
+            }
+            // 发送消息到后端 + 本地展示发送的消息
+            ws.send(text);
+            addMessage(text, 'send');
+            // 清空输入框并重新聚焦
+            msgInput.value = '';
+            msgInput.focus();
+            // 滚动到最新消息
+            scrollToBottom();
+        }
+
+        // 绑定事件：点击发送按钮发送消息
+        sendBtn.addEventListener('click', sendMessage);
+        // 绑定事件：回车发送消息（按住Shift+回车不触发，避免误操作）
+        msgInput.addEventListener('keydown', (e) => {
+            if (e.key === 'Enter' && !e.shiftKey) {
+                e.preventDefault(); // 阻止输入框默认换行
+                sendMessage();
+            }
+        });
+
+        // 页面加载完成后，初始化WebSocket连接
+        window.onload = () => {
+            initWebSocket();
+            msgInput.focus(); // 页面加载后直接聚焦输入框
+        };
+
+        // 页面关闭/刷新时，主动关闭WebSocket连接（避免后端异常）
+        window.onbeforeunload = () => {
+            ws && ws.close(1000, '用户主动关闭页面');
+        };
+    </script>
+</body>
 </html>
